# rustgameproject

./: Cargo.toml  notes.txt
src/: main.rs
src/engine/: components.rs  entitycomponentsystem.rs  gameobject.rs  lib.rs  resources.rs  systems.rs
src/engine/physics/: resources.rs
src/engine/systems/: action_system.rs  draw_system.rs  input_system.rs  mod.rs
