[package]
name = "gameproject"
version = "0.0.0"
authors = [
    "Troels Sheepyhead Jessen <kairyuka@gmail.com>"
]
edition = "2018"

[lib]
name = "engine"
path = "src/engine/lib.rs"

[[bin]]
name = "gameproject"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
piston_window = "0.105.0"
piston2d-opengl_graphics = "0.69.0"
piston2d-sprite = "0.58.0"
find_folder = "0.3.0"
uuid = "0.6"
gfx_device_gl = "0.16.2"
lazy_static = "1.4.0"
log = "0.4"
specs = { version = "0.15.0", features = ["specs-derive"] }