[package]
name = "gameproject"
version = "0.0.0"
authors = [
    "Troels Sheepyhead Jessen <kairyuka@gmail.com>"
]
edition = "2018"

[lib]
name = "engine"
path = "src/engine/lib.rs"

[[bin]]
name = "gameproject"

[dependencies]
ggez = "0.5"
find_folder = "0.3.0"
uuid = "0.6"
lazy_static = "1.4.0"
log = "0.4"
specs = { version = "0.15.0", features = ["specs-derive"] } 